# SimpleGauss

./: CMakeLists.txt  README.md  mat.json
computationAPI/: CMakeLists.txt  CudaAPI.h  IComputationAPI.h  SimpleCPUAPI.h  computationApi.cpp  main_api_example.cpp
data/equation/: answer_0.json  answer_1.json  answer_2.json  test_0.json  test_2.json
data/straight_passage/: answer_0.json  answer_1.json  test_1.json
matrix/: BaseMat.h  BasicMat.h  CMakeLists.txt  DenseMat.h  FixedMat.h  IMat.h  JsonMatIO.h  main_mat.cpp  matrix.cpp
simpleGauss/: CMakeLists.txt  ISimpleGauss.h  SimpleGaussCpu.h  main_plot_cpu_vs_cuda.py  main_simple_gauss_big_mat_example.cpp  main_simple_gauss_cpu_example.cpp  main_simple_gauss_cuda_example.cpp  main_simple_gauss_measure_cpu.cpp  main_simple_gauss_measure_cuda.cpp  simpleGauss.cpp  solutionChecker.h
simpleGauss/SimpleGaussCuda/: SimpleGaussCuda.cpp  SimpleGaussCuda.h  simple_gauss.cu  simple_gauss.cuh
test/: CMakeLists.txt  test_cpu_solve_equation.cpp  test_cuda_solve_equation.cpp  test_cuda_straight_passage.cpp
